--- a/nba.html
+++ b/nba.html
@@ -240,6 +240,222 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for December 23, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Washington Wizards vs Charlotte Hornets
+        </a>
+       </td>
+       <td>
+        December 23, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 24, 2025 4:00 PM:00" data-start="December 23, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Brooklyn Nets vs Philadelphia 76ers
+        </a>
+       </td>
+       <td>
+        December 23, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 24, 2025 4:00 PM:00" data-start="December 23, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Chicago Bulls vs Atlanta Hawks
+        </a>
+       </td>
+       <td>
+        December 23, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 24, 2025 4:30 PM:00" data-start="December 23, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         New Orleans Pelicans vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        December 23, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 24, 2025 4:30 PM:00" data-start="December 23, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Milwaukee Bucks vs Indiana Pacers
+        </a>
+       </td>
+       <td>
+        December 23, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 24, 2025 4:30 PM:00" data-start="December 23, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Toronto Raptors vs Miami Heat
+        </a>
+       </td>
+       <td>
+        December 23, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 24, 2025 4:30 PM:00" data-start="December 23, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Denver Nuggets vs Dallas Mavericks
+        </a>
+       </td>
+       <td>
+        December 23, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 24, 2025 5:00 PM:00" data-start="December 23, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         New York Knicks vs Minnesota Timberwolves
+        </a>
+       </td>
+       <td>
+        December 23, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 24, 2025 5:00 PM:00" data-start="December 23, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-9">
+         Oklahoma City Thunder vs San Antonio Spurs
+        </a>
+       </td>
+       <td>
+        December 23, 2025 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 24, 2025 5:30 PM:00" data-start="December 23, 2025 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-10">
+         Los Angeles Lakers vs Phoenix Suns
+        </a>
+       </td>
+       <td>
+        December 23, 2025 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 24, 2025 6:00 PM:00" data-start="December 23, 2025 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-11">
+         Memphis Grizzlies vs Utah Jazz
+        </a>
+       </td>
+       <td>
+        December 23, 2025 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 24, 2025 6:00 PM:00" data-start="December 23, 2025 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-12">
+         Orlando Magic vs Portland Trail Blazers
+        </a>
+       </td>
+       <td>
+        December 23, 2025 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 24, 2025 7:00 PM:00" data-start="December 23, 2025 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-13">
+         Detroit Pistons vs Sacramento Kings
+        </a>
+       </td>
+       <td>
+        December 23, 2025 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 24, 2025 7:00 PM:00" data-start="December 23, 2025 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-14">
+         Houston Rockets vs Los Angeles Clippers
+        </a>
+       </td>
+       <td>
+        December 23, 2025 7:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 24, 2025 7:30 PM:00" data-start="December 23, 2025 7:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
