--- a/nhl.html
+++ b/nhl.html
@@ -114,6 +114,74 @@
             <td><a href="https://roxiestreams.live/nhl-streams-4">Columbus Blue Jackets vs Los Angeles Kings</a></td>
             <td>December 22, 2025 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2025-12-23 19:00:00" data-start="2025-12-22 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Tuesday, December 23, 2025</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Pittsburgh Penguins vs Toronto Maple Leafs</a></td>
+            <td>December 23, 2025 01:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-24 13:00:00" data-start="2025-12-23 13:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Dallas Stars vs Detroit Red Wings</a></td>
+            <td>December 23, 2025 03:30 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-24 15:30:00" data-start="2025-12-23 15:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">New York Rangers vs Washington Capitals</a></td>
+            <td>December 23, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-24 16:00:00" data-start="2025-12-23 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Montreal Canadiens vs Boston Bruins</a></td>
+            <td>December 23, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-24 16:00:00" data-start="2025-12-23 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Buffalo Sabres vs Ottawa Senators</a></td>
+            <td>December 23, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-24 16:00:00" data-start="2025-12-23 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-6">New Jersey Devils vs New York Islanders</a></td>
+            <td>December 23, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-24 16:00:00" data-start="2025-12-23 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-7">Florida Panthers vs Carolina Hurricanes</a></td>
+            <td>December 23, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-24 16:00:00" data-start="2025-12-23 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-8">Nashville Predators vs Minnesota Wild</a></td>
+            <td>December 23, 2025 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-24 17:00:00" data-start="2025-12-23 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-9">Philadelphia Flyers vs Chicago Blackhawks</a></td>
+            <td>December 23, 2025 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-24 18:00:00" data-start="2025-12-23 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-10">Utah Mammoth vs Colorado Avalanche</a></td>
+            <td>December 23, 2025 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-24 18:00:00" data-start="2025-12-23 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-11">Calgary Flames vs Edmonton Oilers</a></td>
+            <td>December 23, 2025 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-24 18:00:00" data-start="2025-12-23 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-12">San Jose Sharks vs Vegas Golden Knights</a></td>
+            <td>December 23, 2025 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-24 19:00:00" data-start="2025-12-23 19:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-13">Seattle Kraken vs Los Angeles Kings</a></td>
+            <td>December 23, 2025 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-24 19:00:00" data-start="2025-12-23 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
