--- a/soccer.html
+++ b/soccer.html
@@ -96,27 +96,15 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Alverca vs Porto</a>
-<td>December 22, 2025 10:45 AM</td>
-<td><span class="countdown-timer" data-end="December 23, 2025 09:45:00" data-start="December 22, 2025 10:45:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Arsenal vs Crystal Palace</a>
+<td>December 23, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 24, 2025 11:00:00" data-start="December 23, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Napoli vs Bologna</a>
-<td>December 22, 2025 11:00 AM</td>
-<td><span class="countdown-timer" data-end="December 23, 2025 10:00:00" data-start="December 22, 2025 11:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Vitória Guimarães vs Sporting CP</a>
+<td>December 23, 2025 12:45 PM</td>
+<td><span class="countdown-timer" data-end="December 24, 2025 11:45:00" data-start="December 23, 2025 12:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Athletic Club vs Espanyol</a>
-<td>December 22, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 23, 2025 11:00:00" data-start="December 22, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Fulham vs Nottingham</a>
-<td>December 22, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 23, 2025 11:00:00" data-start="December 22, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Benfica vs Famalicão</a>
-<td>December 22, 2025 12:45 PM</td>
-<td><span class="countdown-timer" data-end="December 23, 2025 11:45:00" data-start="December 22, 2025 12:45:00"></span></td>
-<tr>
-</tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table></div>
+</tr></td></tr></td></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
