--- a/index.html
+++ b/index.html
@@ -183,31 +183,25 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-3">Laliga</a></td>
-                    <td>December 22, 2025 12:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 22, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/nfl">NCAA (College Football)</a></td>
+                    <td>December 23, 2025 11:00 AM</td>
+                    <td><span class="countdown-timer" data-start="December 23, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-4">Premier League</a></td>
-                    <td>December 22, 2025 12:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 22, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer-streams-1">Carabao Cup</a></td>
+                    <td>December 23, 2025 12:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 23, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
                     <td><a href="https://roxiestreams.live/nba">NBA</a></td>
-                    <td>December 22, 2025 16:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 22, 2025 16:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td>December 23, 2025 16:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 23, 2025 16:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</a></td>
-                    <td>December 22, 2025 17:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 22, 2025 17:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</a></td>
+                    <td>December 23, 2025 17:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 23, 2025 17:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
-                <tr>
-                    <td><a href="https://roxiestreams.live/nfl">NFL (MNF)</a></td>
-                    <td>December 22, 2025 17:15 PM</td>
-                    <td><span class="countdown-timer" data-start="December 22, 2025 17:15:00" data-end="December 30, 2025 23:30:00"></span></td>
-                </tr>
-                <tr>
                 <tr>
             </tbody>
         </table>
