--- a/index.html
+++ b/index.html
@@ -183,29 +183,19 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer">Premier League</a></td>
-                    <td>December 27, 2025 04:30 AM</td>
-                    <td><span class="countdown-timer" data-start="December 27, 2025 04:30:00" data-end="December 30, 2025 23:30:00"></span></td>
-                </tr>
-                <tr>
                     <td><a href="https://roxiestreams.live/darts">World Darts Championship</a></td>
-                    <td>December 27, 2025 04:30 AM</td>
-                    <td><span class="countdown-timer" data-start="December 27, 2025 04:30:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td>December 28, 2025 04:30 AM</td>
+                    <td><span class="countdown-timer" data-start="December 28, 2025 04:30:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/nfl">NCAA (College Football Bowls)</a></td>
-                    <td>December 27, 2025 08:00 AM</td>
-                    <td><span class="countdown-timer" data-start="December 27, 2025 08:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer">Premier League</a></td>
+                    <td>December 28, 2025 06:00 AM</td>
+                    <td><span class="countdown-timer" data-start="December 28, 2025 06:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/nfl">NFL Weekend Games</a></td>
-                    <td>December 27, 2025 10:00 AM</td>
-                    <td><span class="countdown-timer" data-start="December 27, 2025 10:00:00" data-end="December 30, 2025 23:30:00"></span></td>
-                </tr>
-                <tr>
-                    <td><a href="https://roxiestreams.live/aew">AEW Worlds End</a></td>
-                    <td>December 27, 2025 17:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 27, 2025 17:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/nfl">NFL WEEK 17</a></td>
+                    <td>December 28, 2025 10:00 AM</td>
+                    <td><span class="countdown-timer" data-start="December 28, 2025 10:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
             </tbody>
