--- a/fighting.html
+++ b/fighting.html
@@ -98,13 +98,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/ppv-streams-1">Ring V: Inoue vs Picasso</a></td>
-<td>December 27, 2025 1:00 AM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 27, 2025 01:00:00"></span></td>
-</tr>
-<td><a href="https://roxiestreams.live/aew">AEW Worlds End</a></td>
-<td>December 27, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 27, 2025 15:00:00"></span></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</a></td>
+<td>December 29, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 29, 2025 17:00:00"></span></td>
 </tr>
 </tbody>
 </table>
