--- a/nfl-streams-10.html
+++ b/nfl-streams-10.html
@@ -99,9 +99,10 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
 	<div class="streamchanger">
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nfl10.m3u8', '601'))">Stream 1</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nfl10.m3u8', 'daffodil'))">Stream 2</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nfl10alty.m3u8', '601'))">Stream 3</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nfll.m3u8', '601'))">Stream 1</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nfl10.m3u8', '601'))">Stream 2</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nfl10.m3u8', 'daffodil'))">Stream 3</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nfl10alty.m3u8', '601'))">Stream 4</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -127,7 +128,7 @@ fetch('domains.txt')
   .then(data => {
     domains = data.trim().split('\n').filter(d => d.trim());
     // Auto-load initial stream after domains load
-    setTimeout(() => showPlayer('clappr', getRandomStream('nfl10.m3u8')), 500);
+    setTimeout(() => showPlayer('clappr', getRandomStream('nfll.m3u8')), 500);
   })
   .catch(() => {
     console.error('Failed to load domains.txt');
