--- a/nhl.html
+++ b/nhl.html
@@ -149,6 +149,34 @@
             <td><a href="https://roxiestreams.live/nhl-streams-11">Vancouver Canucks vs Seattle Kraken</a></td>
             <td>December 29, 2025 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2025-12-30 19:00:00" data-start="2025-12-29 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Tuesday, December 30, 2025</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">New Jersey Devils vs Toronto Maple Leafs</a></td>
+            <td>December 30, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-31 16:00:00" data-start="2025-12-30 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Montreal Canadiens vs Florida Panthers</a></td>
+            <td>December 30, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-31 16:00:00" data-start="2025-12-30 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Carolina Hurricanes vs Pittsburgh Penguins</a></td>
+            <td>December 30, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-31 16:00:00" data-start="2025-12-30 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">New York Islanders vs Chicago Blackhawks</a></td>
+            <td>December 30, 2025 05:30 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-31 17:30:00" data-start="2025-12-30 17:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Philadelphia Flyers vs Vancouver Canucks</a></td>
+            <td>December 30, 2025 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-31 19:00:00" data-start="2025-12-30 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
