--- a/fighting.html
+++ b/fighting.html
@@ -98,7 +98,7 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</a></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</a></td>
 <td>December 29, 2025 17:00 PM</td>
 <td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 29, 2025 17:00:00"></span></td>
 </tr>
