--- a/soccer-streams-7.html
+++ b/soccer-streams-7.html
@@ -101,7 +101,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.shadow-ran.online/darts.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.shadow-ran.online/arsenal.m3u8')">Stream 1</button>
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://streams.bitmovin.com/d59p9366okvm4g5agge0/manifest.m3u8')">Stream 2 (Multi Quality)</button>
             </div>
             <div class="embedchat">
